--- a/sass/partials/_baselayout.scss
+++ b/sass/partials/_baselayout.scss
@@ -79,7 +79,12 @@ li.top-bar-button {
     }
 }
 
+
 .main-content {
+    margin-top: 4em;
+    margin-bottom: 4em;
+}
+#main-content {
     margin-top: 4em;
     margin-bottom: 4em;
 }
